Sun Jan 25 23:47:06 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/logging/server/Logging_Server.cpp:
        * cuts/utils/testing/svcs/logging/Test_Logging_Service.cpp:

          . Added more debug messages.

Sun Jan 25 23:09:55 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/workers/Test_Logger/Test_Logger_i.cpp:

          . Bug fix where one of the debug messages was
            formatted incorrectly.

Sun Jan 25 21:59:30 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/workers/Test_Logger/Test_Logger_i.h:
        * cuts/workers/Test_Logger/Test_Logger_i.cpp:

          . Switch to only storing the UUID of a test in its
            object format, instead of as a CUTS::UUID.

Sun Jan 25 21:04:37 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/testing/svcs/logging/Test_Logging_Service.cpp:

          . Re-enabled server shutdown.

        * cuts/utils/testing/svcs/server/TestManager_i.cpp:
        * cuts/utils/testing/svcs/server/server.mpc:

          . Bug fix where the manager was using the incorrect UUID. Now,
            it get the test UUID from the database profile

Sun Jan 25 20:02:45 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/testing/Testing_App.cpp:

          . Added debug output for the shutdown timeout.

Sun Jan 25 16:37:18 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/testing/Test_Options.h:
        * cuts/utils/testing/Testing_App.cpp:

          . Added support for shutdown timeout to prevent the test
            from running indefinitely.

        * cuts/utils/testing/svcs/logging/Test_Logging_Service.cpp:

          . Temporarily disable server shutdown until we can find out
            where the race conditions are.

Sun Jan 25 15:44:25 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * examples/PICML/AntiSPAM/descriptors/hypothesis1/run-test-all.sh:
